XP-727 Image Cropping - Fixup inline wizard modal effect Removed white border of image frame

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -59,7 +59,6 @@
     overflow: hidden;
     position: relative;
     box-shadow: none;
-    border: 1px solid @admin-white;
 
     .image-canvas {
       position: absolute;
